# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/LearnOpenGL/: callbacks.h  hello_triangle.h  hello_window.h  path_tool.h.in  shader.h  shader_path_tool.h.in  texture.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: hello_triangle.vs
src/: callbacks.cpp  hello_triangle.cpp  hello_window.cpp  main.cpp  shader.cpp  stb_image_impl.cpp  texture.cpp
